[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metrics-servers"
version = "1.0.0"
description = "API de monitorización de servidores - Python/FastAPI"
requires-python = ">=3.14"

dependencies = [
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.32.0,<1.0",
    "sqlmodel>=0.0.22,<1.0",
    "pymysql>=1.1.1,<2.0",
    "cryptography>=43.0.0,<46.0",
    "pymongo>=4.10.0,<5.0",
    "minio>=7.2.0,<8.0",
    "ldap3>=2.9.1,<3.0",
    "python-jose[cryptography]>=3.3.0,<4.0",
    "pwdlib[argon2]>=0.2.0,<1.0",
    "paramiko>=3.5.0,<4.0",
    "pydantic-settings>=2.6.0,<3.0",
    "python-dotenv>=1.0.0,<2.0",
    "python-multipart>=0.0.12,<1.0",
    "httpx>=0.27.0,<1.0",
    "redis>=5.0.0,<6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
