# ──────────────────────────────────────────────────────────────────────────────
# pyproject.toml — Definición del proyecto y dependencias
#
# Gestiona las dependencias con pip o uv:
#   pip install -e .           (instalación en modo editable)
#   uv sync                    (recomendado en desarrollo)
#   pip install -e ".[dev]"    (incluye dependencias de test)
#
# Convención de rangos:
#   "pkg>=X.Y,<N.0"  → acepta parches y minors, pero bloquea el siguiente major.
#   Objetivo: recibir correcciones de seguridad sin riesgo de API breaking changes.
# ──────────────────────────────────────────────────────────────────────────────

[build-system]
# Hatchling es el backend de construcción moderno de PyPA.
# Reemplaza a setuptools para proyectos que no necesitan extensiones C.
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metrics-servers"
version = "1.0.0"
description = "API de monitorización de servidores - Python/FastAPI"
requires-python = ">=3.14"

dependencies = [
    # ── Framework web ────────────────────────────────────────────────────────
    # Framework ASGI con validación automática via Pydantic y generación de
    # OpenAPI. Incluye Starlette como capa HTTP subyacente.
    "fastapi>=0.115.0,<1.0",

    # Servidor ASGI de producción. El extra [standard] añade uvloop (event loop
    # optimizado para Linux), websockets y watchfiles (recarga automática con
    # --reload en desarrollo).
    "uvicorn[standard]>=0.32.0,<1.0",

    # ── ORM / Base de datos relacional ───────────────────────────────────────
    # ORM que combina Pydantic v2 con SQLAlchemy. Permite definir modelos de
    # tabla y DTOs de validación en la misma clase con `table=True`.
    "sqlmodel>=0.0.22,<1.0",

    # Driver MySQL/MariaDB puro Python para SQLAlchemy (dialect mysql+pymysql).
    # No requiere librerías C nativas, lo que simplifica el despliegue en
    # contenedores sin dependencias del sistema.
    "pymysql>=1.1.1,<2.0",

    # Backend criptográfico compartido por pymysql (conexiones TLS con MariaDB)
    # y python-jose (firma JWT). El rango <46 es más amplio que otros paquetes
    # porque es una dependencia transitiva de varios consumidores.
    "cryptography>=43.0.0,<46.0",

    # ── Base de datos de métricas ────────────────────────────────────────────
    # Cliente oficial de MongoDB. Se usa para leer y escribir métricas de
    # servidores en `repositories/mongo_repo.py`.
    "pymongo>=4.10.0,<5.0",

    # ── Almacenamiento de objetos ────────────────────────────────────────────
    # SDK oficial de MinIO/S3 para subida, descarga y generación de URLs
    # presignadas. Ver `services/minio_service.py`.
    "minio>=7.2.0,<8.0",

    # ── Autenticación corporativa ────────────────────────────────────────────
    # Cliente LDAP/Active Directory. Se usa para autenticar usuarios y obtener
    # sus grupos AD en `services/ldap_service.py`.
    "ldap3>=2.9.1,<3.0",

    # ── JWT ──────────────────────────────────────────────────────────────────
    # Emisión y validación de JSON Web Tokens con HMAC-SHA256 (HS256).
    # El extra [cryptography] habilita soporte para algoritmos asimétricos
    # (RS256, ES256) aunque actualmente se usa solo HS256.
    "python-jose[cryptography]>=3.3.0,<4.0",

    # Utilidades de hashing de contraseñas con soporte para Argon2 (estado
    # del arte en hashing de passwords). El extra [argon2] instala argon2-cffi.
    "pwdlib[argon2]>=0.2.0,<1.0",

    # ── SSH Probe ────────────────────────────────────────────────────────────
    # Cliente SSH que ejecuta comandos remotos al registrar servidores para
    # obtener hostname, OS, arquitectura y versión de kernel.
    # Ver `services/ssh_probe_service.py`.
    "paramiko>=3.5.0,<4.0",

    # ── Configuración ────────────────────────────────────────────────────────
    # Extensión de Pydantic para cargar y validar configuración desde variables
    # de entorno y fichero .env. Ver `core/config.py`.
    "pydantic-settings>=2.6.0,<3.0",

    # Lectura de ficheros .env. Declarado explícitamente aunque es una
    # dependencia transitiva de pydantic-settings, para fijar el rango de versión.
    "python-dotenv>=1.0.0,<2.0",

    # Parsing de formularios multipart/form-data. Requerido por FastAPI para
    # los endpoints que reciben ficheros con `UploadFile` (subida de fotos).
    "python-multipart>=0.0.12,<1.0",

    # ── Cliente HTTP ─────────────────────────────────────────────────────────
    # Cliente HTTP asíncrono. Usado como cliente de test en el conjunto de
    # pruebas (TestClient asíncrono de FastAPI requiere httpx).
    "httpx>=0.27.0,<1.0",

    # ── Blocklist de tokens ──────────────────────────────────────────────────
    # Cliente Redis. Se usa exclusivamente para la blocklist de JWT revocados
    # en el logout. Ver `core/token_blocklist.py`.
    "redis>=5.0.0,<6.0",
]

# ── Dependencias de desarrollo ────────────────────────────────────────────────
# Instalar con: pip install -e ".[dev]"  o  uv sync --extra dev
[project.optional-dependencies]
dev = [
    # Framework de tests. Configuración en pytest.ini o pyproject.toml.
    "pytest>=8.0.0",

    # Soporte para tests async (async def test_...) con pytest.
    # Necesario para testar endpoints FastAPI con cliente asíncrono.
    "pytest-asyncio>=0.24.0",

    # Cliente HTTP asíncrono para tests de integración de la API.
    # Se declara también en dev para versionar de forma independiente si es
    # necesario; en producción ya está incluido en `dependencies`.
    "httpx>=0.27.0",
]

# ── Configuración del build ───────────────────────────────────────────────────
[tool.hatch.build.targets.wheel]
# Incluye el directorio raíz como paquete instalable.
# Necesario porque los módulos de la app (core/, models/, etc.) están en el
# raíz del proyecto, no dentro de un subdirectorio con nombre del paquete.
packages = ["."]
